@@ -204,6 +204,6 @@ public class FlintWorkbenchTileEntity extends TileEntity implements IInventoryIn
     private Optional<FlintWorkbenchRecipe> findMatchingRecipe() {
         assert this.world != null;
         return stacks.stream().allMatch(ItemStack::isEmpty) ? Optional.empty()
-                : this.world.getRecipeManager().getRecipe(FlintWorkbenchRecipe.flint_workbench, getInventory(), this.world);
+                : this.world.getRecipeManager().getRecipe(FlintWorkbenchRecipe.flint_workbench, inventoryWrapper, this.world);
     }
 }
